<resources>
    <string name="app_name">UnderTheSea_AOS</string>

    <string name="short_monday">월</string>

    <string name="short_tueday">화</string>

    <string name="short_wedday">수</string>

    <string name="short_thuday">목</string>

    <string name="short_friday">금</string>

    <string name="short_satday">토</string>

    <string name="short_sunday">일</string>

    <!--  CreateRoutine Fragment - list_item_workout  -->
    <string name="create_set_text">%1$s set</string>
    <string name="create_prep_text">%1$s prep(s)</string>
    <string name="create_workout_text">%1$s workout(s)</string>
    <string name="create_rest_text">%1$s rest(s)</string>

    <string name="calendar_year_month_format">y년M월</string>

</resources>