<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calendar4.MainActivity">

    <LinearLayout
        android:id="@+id/topDateLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_card_header_sky"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/beforeIB"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_effect"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@id/dateTV"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/dateTV"
            app:srcCompat="@drawable/ic_previous" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/dateSelectLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect"
            android:gravity="center">

            <ImageView
                android:id="@+id/calenderIB"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_calendar_black" />

            <TextView
                android:id="@+id/dateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="start|center_vertical"
                android:paddingTop="@dimen/report_title_margin_vertical"
                android:paddingBottom="@dimen/report_title_margin_vertical"
                android:text="date"
                android:textColor="@color/color_text"
                android:textSize="@dimen/global_text_size" />

        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/afterIB"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_effect"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/caldalLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_global"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topDateLL">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/schedule_week_view_title"
            android:orientation="horizontal">

            <TextView
                style="@style/content_gray"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="-1.1dp"
                android:layout_weight="1"
                android:background="@drawable/background_border_right"
                android:gravity="center"
                android:text="@string/short_sunday" />

            <TextView
                style="@style/content_gray"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="-1.1dp"
                android:layout_weight="1"
                android:background="@drawable/background_border_right"
                android:gravity="center"
                android:text="@string/short_monday" />

            <TextView
                style="@style/content_gray"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="-1.1dp"
                android:layout_weight="1"
                android:background="@drawable/background_border_right"
                android:gravity="center"
                android:text="@string/short_tueday" />

            <TextView
                style="@style/content_gray"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="-1.1dp"
                android:layout_weight="1"
                android:background="@drawable/background_border_right"
                android:gravity="center"
                android:text="@string/short_wedday" />

            <TextView
                style="@style/content_gray"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="-1.1dp"
                android:layout_weight="1"
                android:background="@drawable/background_border_right"
                android:gravity="center"
                android:text="@string/short_thuday" />

            <TextView
                style="@style/content_gray"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="-1.1dp"
                android:layout_weight="1"
                android:background="@drawable/background_border_right"
                android:gravity="center"
                android:text="@string/short_friday" />

            <TextView
                style="@style/content_gray"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/short_satday" />

        </LinearLayout>

        <!--달력뷰-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="7" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>